--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -1,2 +1,8 @@
 <h1>Dolls#new</h1>
-<p>Find me in app/views/dolls/new.html.erb</p>
+  <div class="container">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+      <img src="https://i.ebayimg.com/00/s/MTYwMFgxNjAw/z/b5EAAOSw241Ygkdf/$_58.JPG" alt="Smiley face" height="420" width="420">
+      </div>
+    </div>
+  </div>
