--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -2,7 +2,8 @@
 
 <div class="container">
   <div class="card">
-  <%= link_to "",  %>
+  <!-- add images link-->
+  <!--<%= link_to ,  %>-->
   <%= doll.name%>
   <%= doll.description%>
   <%= doll.price %>
