--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -4,9 +4,9 @@
   <div class="card">
   <!-- add images link-->
   <!--<%= link_to ,  %>-->
-  <%= doll.name%>
-  <%= doll.description%>
-  <%= doll.price %>
+  <%= @doll.name%>
+  <%= @doll.description%>
+  <%= @doll.price %>
   <%= link_to "Book a Doll",doll_booking(:doll_id), class: "btn btn-success"%>
   </div>
 </div>
