--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,4 +2,7 @@
   height: 300px;
   background-position: top center;
   background-repeat: no-repeat;
+  margin-top: 50px;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.35);
+  border-radius: 8px;
 }
