DesignDeLaVueShow vignette shadow, rounded, margin, added font family Roboto for the whole doc

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -75,3 +75,9 @@
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
 }
+
+.navbar-logo {
+  font-family: 'Share', cursive;
+  font-size: 40px;
+  margin-top: 20px;
+}
