--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -8,7 +8,7 @@
         <div class="card text-center" style="background-image: url('<%= image_path "doll#{doll.id}.jpg" %>')">
         </div>
 
-        <div class="card-body text-center"><p><%= doll.price %> euros</p>
+        <div class="card-body text-center"><p><%= doll.price %> €</p>
          <p> <%= link_to doll.name, doll_path(doll) %></p>
         </div>
       </div>
