--- a/app/assets/stylesheets/components/_dolls_card.scss
+++ b/app/assets/stylesheets/components/_dolls_card.scss
@@ -6,33 +6,43 @@
 }
 
 .card {
-  height: 400px;
+  height: 440px;
   width: 900px;
   background-color: white;
-  background-position: center;
   color: gray;
   position: relative;
   border-radius:3px;
-  box-shadow: 1px 1px 3px #F5F5F5
+  box-shadow: 2px 2px 5px #B3B3B3
 }
+.card-content{
+  height: 440px;
+  width: 435px;
+  padding: 20px;
 
-.image{
-  height: 300px;
-  width: 250px;
+}
+.card-image{
+  height: 400px;
+  width: 300px;
   background-size: cover;
-
-.description{
-  height: 300px;
-  width: 200px;
-}
+  padding: 20px;
+  margin: auto;
 
 }
-.h3{
-  padding: 10px;
+.doll_description{
+  margin-top: 70px;
+  margin-bottom: 40px;
+  font-size: 20px;
+}
+.doll_name{
+  font-size: 40px;
+  margin-bottom: 40px;
 }
 .price{
-  padding: 15px;
+  font-size: 32px;
 }
-.text-center{
-   padding: 60px;
+.btn{
+  margin-top:30px;
 }
+
+
+
