--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -1,21 +1,24 @@
-<h1 class="text-center">Doll Profil</h1>
-
+<h1 class="text-center"><%= @doll.name%></h1>
 <div class="container">
 
   <div class="card">
       <div class="row">
+
         <div class="col-xs-6">
-          <div class="image" style="background-image: url(<%= asset_path "doll#{@doll.id}.jpg" %>);">
+          <div class="card-content">
+            <div class="card-image" style=" background-image: url(<%= asset_path "doll#{@doll.id}.jpg" %>);">
+            </div>
           </div>
         </div>
+
         <div class="col-xs-6 ">
-          <div class="description">
-            <h3><%= @doll.name%></h3>
-            <h4><%= @doll.description%></h4>
-            <h4 class="price text-right"><%= @doll.price %> $</h4>
-            <%= link_to "Louer","#", class: "btn btn-success" %>
+          <div class="card-content">
+            <p class="doll_description"><%= @doll.description%></p>
+            <p class="text-right price"><%= @doll.price %> €</p>
+            <%= link_to "Louer","#", class: "btn btn-success text-left  btn-lg" %>
           </div>
         </div>
+
       </div>
   </div>
 </div>
