--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,20 @@
 // Specific CSS for your home-page
+body {
+ background-color: white;
+}
+
+a {
+ color: #544B4A;
+ font-weight: bold;
+}
+
+a:hover {
+  color: #A18F8D;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.description {
+  opacity: 0.5;
+  text-align: justify;
+}
