--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,9 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "navbar";
-@import "card";
 @import "row";
-@import "card-body";
+@import "card";
 @import "body";
-@import "_dolls_card";
+@import "dolls_card";
 
