--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,18 +1,18 @@
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
-  background: #e2006a;
+  background-color: black;
   transition: all 0.3s ease;
   height: 70px;
   padding: 0px 30px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-}
-
-/* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
+  color: white;
+  border-bottom: 5px solid #e2006a;
+  position: fixed;
+  width: 100%;
+  z-index: 1000;
 }
 
 /* User Avatar */
@@ -81,6 +81,7 @@
 .navbar-logo {
   font-family: 'Share', cursive;
   font-size: 40px;
-  margin-top: 20px;
-  color: white;
+    a, a:hover {
+    color: white;
+  }
 }
