--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -1,13 +1,15 @@
 <div class="container">
   <div class="row">
     <% @dolls.each do |doll| %>
-      <div class="col-xs-12 col-md-3 col-sm-4">
-        <%= link_to doll_path(doll) do %>
-         <div class="card text-center" style="background-image: url('<%= image_path "doll#{doll.id}.jpg" %>')">
-         </div>
-        <% end %>
-        <div class="card-body text-center"><p><%= link_to doll.name, doll_path(doll) %> - <%= doll.price %> €</p>
-        <p class="description"> <%= doll.description.byteslice(0..80) %>...</p>
+      <div class="col-xs-12 col-md-3 col-sm-4 text-center" >
+        <div class="card-index">
+          <%= link_to doll_path(doll) do %>
+          <div class="card-index-image" style="background-image: url('<%= image_path "doll#{doll.id}.jpg" %>')">
+          </div>
+          <% end %>
+          <div class="card-body text-center"><p><%= link_to doll.name, doll_path(doll) %> - <%= doll.price %> €</p>
+          <p class="description"> <%= doll.description.byteslice(0..50) %>...</p>
+          </div>
         </div>
       </div>
     <% end %>
