--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,8 +1,17 @@
 .card-index {
+  background-color: rgba(0,0,0, 0.02);
+  border-radius: 8px;
+  padding-bottom: 10px;
+}
+.card-index-image {
   height: 400px;
+  width: 100%;
   background-position: top center;
   background-repeat: no-repeat;
   margin-top: 50px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.35);
   border-radius: 8px;
+}
+.card-body{
+  margin: 20px;
 }
