--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,10 @@
     <%= render 'shared/flashes' %>
 <!--     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
-    <%= yield %>
+    <div class="navbar-content-companion">$
+    </div>
+      <%= yield %>
+
     <%= javascript_include_tag 'application' %>
   </body>
 </html>
