--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -14,6 +14,7 @@
         <div class="col-xs-6 ">
           <div class="card-content">
             <p class="doll_description"><%= @doll.description%></p>
+            <p>Location de 19H à midi. Nettoyer avant restitution.</p>
             <p class="text-right price"><%= @doll.price %> €</p>
             <%= render "bookings/form", doll: @doll, booking: @booking %>
           </div>
