--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -4,7 +4,7 @@
       <div class="col-xs-12 col-md-3 col-sm-4 text-center" >
         <div class="card-index">
           <%= link_to doll_path(doll) do %>
-          <div class="card-index-image" style="background-image: url('<%= image_path "doll#{doll.id}.jpg" %>')">
+          <div class="card-index-image" style="background-image: url('<%= image_path doll.photo %>')">
           </div>
           <% end %>
           <div class="card-body text-center"><p><%= link_to doll.name, doll_path(doll) %> - <%= doll.price %> €</p>
