modify dools card show booking btn

--- a/app/assets/stylesheets/components/_dolls_card.scss
+++ b/app/assets/stylesheets/components/_dolls_card.scss
@@ -3,6 +3,7 @@
   width: 900px;
   height:900px;
   padding: 0px;
+  color:#333333;
 }
 
 .card {
@@ -15,6 +16,7 @@
   box-shadow: 2px 2px 5px #B3B3B3
 }
 .card-content{
+  color:#333333;
   height: 440px;
   width: 435px;
   padding: 20px;
@@ -22,7 +24,7 @@
 }
 .card-image{
   height: 400px;
-  width: 300px;
+  width: 350px;
   background-size: cover;
   padding: 20px;
   margin: auto;
