--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -4,9 +4,9 @@
   <div class="card">
       <div class="row">
 
-        <div class="col-xs-6">
+        <div class="col-xs-6 " style="padding-left: 15px">
           <div class="card-content">
-            <div class="card-image" style=" background-image: url(<%= asset_path "doll#{@doll.id}.jpg" %>);">
+            <div class="card-image" style=" background-image: url(<%= asset_path @doll.photo %>);">
             </div>
           </div>
         </div>
