Done new doll show

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -2,6 +2,7 @@
   background-color: rgba(0,0,0, 0.02);
   border-radius: 8px;
   padding-bottom: 10px;
+  max-height: 530px;
 }
 .card-index-image {
   height: 400px;
