--- a/app/assets/stylesheets/components/_dolls_card.scss
+++ b/app/assets/stylesheets/components/_dolls_card.scss
@@ -1,13 +1,9 @@
-.content {
-  height: 1000px;
-  background-repeat: no-repeat;
-  background-position: top left;
-  background-size: 50%;
-  // background-color: red;
-}
+// .content {
+//   height: 1000px;
+//   // background-color: red;
+// }
 .card {
-  height: 440px;
-  width: 100%;
+  height: 1000px;
   color: gray;
   position: relative;
 }
@@ -19,11 +15,15 @@
   background-color: white;
 }
 .card-image{
-  height: 400px;
-  width: 350px;
+  width: 100%;
+  height: 1000px;
   background-size: cover;
-  padding: 20px;
-  margin: auto;
+  background-repeat: no-repeat;
+  background-position: left center;
+  padding-right: -15px;
+}
+.padding-0 {
+  padding: 0px !important;
 }
 .doll_description{
   margin-bottom: 20px;
