--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -1,8 +1,12 @@
-<div class="content" style="background-image: url(<%= asset_path @doll.photo %>);"">
+<div class="content" >
   <div class="container-fluid"">
     <div class="card">
         <div class="row">
-          <div class="col-md-offset-6 col-xs-6">
+          <div class="col-xs-12 col-md-6 padding-0">
+            <div class="card-image" style="background-image: url(<%= asset_path @doll.photo %>);"">
+            </div>
+          </div>
+          <div class="col-xs-12 col-md-6">
             <div class="card-content text-left">
               <h1><%= @doll.name%></h1>
               <p class="doll_description"><%= @doll.description%></p>
