Login et Sign up form ok

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,7 +4,7 @@
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-offset-2 col-md-8">
           <div class="card-login">
             <a class="btn btn-primary btn-social" href="#" role="button"> <i class="fa fa-facebook-square" aria-hidden="true"></i> Sign up with Facebook</a>
-            <a class="btn btn-secondary btn-social" href="#" role="button"> <i class="fa fa-google" aria-hidden="true"></i> Sign up with Google</a>
+
             <div class="text-center email-signup">
             <p>or sign up with your email</p>
             </div>
@@ -18,7 +18,7 @@
               </div>
 
               <div class="form-actions">
-              <%= f.button :submit, "Sign up" %>
+              <%= f.button :submit, "Sign up", class:"btn-booking"%>
             </div>
           <% end %>
         </div>
