--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,10 @@
 
       <%= render 'shared/flashes' %>
 
-      <%= yield %>
+      <div class="content_wrapper">
+        <%= yield %>
+      </div>
+
 
       <%= render 'shared/footer' %>
 
