Done facebook link and signup link in login

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,8 @@
-
   <div class="container">
       <div class= "row">
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-offset-2 col-md-8">
           <div class="card-login">
-            <a class="btn btn-primary btn-social" href="#" role="button"> <i class="fa fa-facebook-square" aria-hidden="true"></i> Sign up with Facebook</a>
-
+            <%= render "devise/shared/links" %>
             <div class="text-center email-signup">
             <p>or sign up with your email</p>
             </div>
