Modify btn delete on doll show

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -40,7 +40,7 @@
                   <div class="profil-doll">
                     <div class="">
                      <h3><%= dolie.name %></h3>
-                      <%= link_to doll_path(dolie), method: :delete do %>
+                      <%= link_to doll_path, method: :delete do %>
                         <i class="fa fa-trash align-right"></i>
                       <% end %>
                     </div>
