--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -1,9 +1,27 @@
 <% provide(:title, "Ajouter une doll à louer") %>
-<h1>Dolls#new</h1>
-  <div class="container">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <img src="https://i.ebayimg.com/00/s/MTYwMFgxNjAw/z/b5EAAOSw241Ygkdf/$_58.JPG" alt="Smiley face" height="420" width="420">
-      </div>
+<div class="container text-center">
+  <div class="content-medium">
+  <h1>Ajouter une doll à la location</h1>
+
+  <%= simple_form_for [@user, @doll] do |f| %>
+    <div class="form-group">
+      <%= f.input :name, label: 'Son nom', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' }, error: 'Le nom est obligatoire, please specify one' %>
     </div>
+    <div class="form-group">
+      <%= f.input :description, label: 'Sa description', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' } %>
+    </div>
+    <div class="form-group">
+      <%= f.input :price, label: 'Prix de la location', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' }, error: 'Le nom est obligatoire, please specify one' %>
+    </div>
+    <div class="form-group">
+
+      <label class="custom-file">
+        <%= f.input :photo, label: 'Charger une photo', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'custom-file-input' } %>
+        <span class="custom-file-control"></span>
+      </label>
+
+    </div>
+    <%= f.button :submit, class: 'btn btn-primary' %>
+ <% end %>
   </div>
+</div>
