search bar done, title and slogon

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -16,3 +16,14 @@
 .card-body{
   margin: 20px;
 }
+
+.slogan {
+  margin-top: 0px;
+  font-size: 270%;
+  margin-bottom: 0px;
+  font-weight: 300 !important;
+  line-height: 56px !important;
+  letter-spacing: -0.8px !important;
+  padding-top: 8px !important;
+  padding-bottom: 8px !important;
+}
