--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -20,41 +20,36 @@
         height: 70px;
     }
 
-    #custom-search-input button {
-        border: 0;
-        background: none;
-        /** belows styles are working good */
-        padding: 2px 5px;
-        margin-top: 2px;
-        position: relative;
-        left: -130px;
-        /* IE7-8 doesn't have border-radius, so don't indent the padding */
-        margin-bottom: 0;
-        -webkit-border-radius: 8px;
-        -moz-border-radius: 8px;
-        border-radius: 8px;
-        color:#D9230F;
-    }
 
     .search-query:focus + button {
         z-index: 3;
+
     }
 
-.fake-input{
-  display: flex;
-  justify-content: space-between;
-  border: 1px solid rgb(220,220,220);
-  padding: 8px 9px;
-  margin-top: 35px;
-  border-radius: 8px;
-  height: 70px;
-  input, input:focus, input:hover, textarea:focus, textarea:hover {
-    width: 88%;
-    border: none;
-    outline: none !important;
-  }
+    .fake-input{
+      display: flex;
+      justify-content: space-between;
+      border: 1px solid rgb(220,220,220);
+      padding: 10px 30px ;
+      margin-top: 35px;
+      border-radius: 8px;
+      height: 80px;
+      input, input:focus, input:hover, textarea:focus, textarea:hover {
+        width: 88%;
+        border: none;
+        outline: none !important;
+    }
 }
 
 span {
   z-index: 10;
+}
+
+
+#button-search{
+  width: 130px;
+  height: 48px;
+  margin-top: 5px;
+  margin-right: -15px;
+  border-radius: 6px;
 }
