--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -4,7 +4,7 @@
 // Define fonts for body and headers
 $body-font: "Roboto", "Helvetica", "sans-serif";
 $headers-font: "Roboto", "Helvetica", "sans-serif";
-
+$button-font: "Roboto";
 
 
 // To use a font file (.woff) uncomment following lines
