--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -2,22 +2,19 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
+
+      <div class="title">
+      <span>RentDoll</span>
+      </div>
+      <div class="slogan">
+        <p> Keep calm<br>and Love a doll.</p>
+      </div>
       <div class="fake-input">
-        <input placeholder="Doll" />
-          <button class="btn btn-danger" type="button">
+        <input placeholder="Où ?" />
+          <button class="btn btn-danger" type="button" id="button-search">
                 <span> Rechercher</span>
           </button>
       </div>
-      <!-- <div id="custom-search-input">
-       <div class="input-group">
-         <input type="text" class="search-query form-control" placeholder="Doll" />
-          <span class="input-group-btn">
-            <button class="btn btn-danger" type="button">
-              <span class=" btn btn-danger"  id="button"> Rechercher</span>
-            </button>
-          </span>
-        </div>
-      </div> -->
     </div>
     <% @dolls.each do |doll| %>
       <div class="col-xs-12 col-md-3 col-sm-4 text-center" >
