--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar-wagon">
   <div class="navbar-logo">
   <%= link_to root_path, class: "navbar-wagon-brand" do %>
-    <span><i class="fa fa-diamond" aria-hidden="true"></i> RentDoll</span>
+    <span><i class="fa fa-diamond" aria-hidden="true"></i></span>
   <% end %>
   </div>
   <!-- Right Navigation -->
