--- a/app/views/dolls/index.html.erb
+++ b/app/views/dolls/index.html.erb
@@ -11,7 +11,7 @@
       </div>
       <div class="fake-input">
         <input placeholder="Où ?" />
-          <button class="btn btn-danger" type="button" id="button-search">
+          <button class="btn btn-pink"type="button" id="button-search">
                 <span> Rechercher</span>
           </button>
       </div>
