--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render 'shared/navbar' %>
 <!--     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p> -->
-    <div class="navbar-content-companion">$
+    <div class="navbar-content-companion">
     </div>
 
       <%= render 'shared/flashes' %>
