--- a/app/views/dolls/edit.html.erb
+++ b/app/views/dolls/edit.html.erb
@@ -2,7 +2,7 @@
 
 <div class="container text-center">
   <div class="content-medium">
-  <h1>Décrivez @doll.name</h1>
+  <h1>Décrivez <%= @doll.name %></h1>
 
   <%= simple_form_for @doll do |f| %>
     <div class="form-group">
@@ -18,6 +18,7 @@
 
       <label class="custom-file">
         <%= f.input :photo, label: 'Charger une photo', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'custom-file-input' } %>
+        <%= f.input :photos, as: :attachinary %>
         <span class="custom-file-control"></span>
       </label>
 
