--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -29,10 +29,7 @@
             <span>Ajouter une doll en location</span>
           <% end %>
         </div>
-
-
         <h5>Vous avez  <%= @user.dolls.count %> dolls en location:</h5>
-
         <ul class="list-group">
           <% @user.dolls.each do |dolie| %>
             <% if dolie.persisted? %>
@@ -55,6 +52,22 @@
 
       </div>
     </div>
+    <!-- Dolls booked ******************-->
+    <div class="col-xs-12 col-sm-6">
+      <h4>Dolls Louez</h4>
+      <h5>Vous avez louez <%= @bookings.count %> dolls</h5>
+      <% @bookings.each do |booking| %>
+        <div class="message">
+          <div class="message-name text-center">
+            <h3><%= booking.doll.name %></h3>
+          </div>
+          <div class="message-body text-center">
+            <p><%= booking.book_at %> </p>
+          </div>
+        </div>
+      <% end %>
+    </div>
+    <!-- ************************- -->
   </div>
     <div class="row">
       <div class="col-xs-12">
