--- a/app/views/dolls/edit.html.erb
+++ b/app/views/dolls/edit.html.erb
@@ -17,8 +17,7 @@
     <div class="form-group">
 
       <label class="custom-file">
-        <%= f.input :photo, label: 'Charger une photo', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'custom-file-input' } %>
-        <%= f.input :photos, as: :attachinary %>
+        <%= f.input :photo, label: 'Charger une photo', as: :attachinary, :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'custom-file-input' } %>
         <span class="custom-file-control"></span>
       </label>
 
