--- a/app/views/dolls/new.html.erb
+++ b/app/views/dolls/new.html.erb
@@ -23,7 +23,7 @@
       </label>
 
       </div>
-      <%= f.button :submit, class: 'btn btn-primary' %>
+      <%= f.button :submit, class: 'btn btn-booking' %>
    <% end %>
     </div>
   </div>
