--- a/app/views/dolls/edit.html.erb
+++ b/app/views/dolls/edit.html.erb
@@ -1,28 +1,36 @@
 <% provide(:title, "Éditer la fiche de la doll") %>
 
-<div class="container text-center">
-  <div class="content-medium">
-  <h1>Décrivez <%= @doll.name %></h1>
+<div class="container">
+    <div class="row">
+      <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-3 col-md-offset-2 col-md-8">
+      <div class="card-edit-doll">
+      <h1>Décrivez <%= @doll.name %></h1>
 
-  <%= simple_form_for @doll do |f| %>
-    <div class="form-group">
-      <%= f.input :name, label: 'Son nom', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' }, error: 'Le nom est obligatoire, please specify one' %>
-    </div>
-    <div class="form-group">
-      <%= f.input :description, label: 'Sa description', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' } %>
-    </div>
-    <div class="form-group">
-      <%= f.input :price, label: 'Prix de la location', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' }, error: 'Le nom est obligatoire, please specify one' %>
-    </div>
-    <div class="form-group">
+    <%= simple_form_for @doll do |f| %>
+      <div class="form-group-reduced">
+        <%= f.input :name, label: 'Son nom', :label_html => { :class => 'doll-name' }, :input_html => { :class => 'form-control' }, error: 'Le nom est obligatoire' %>
+      </div>
+      <div class="form-group">
+        <%= f.input :description, label: 'Sa description', :as => :text,:label_html => { :class => 'doll-name' }, :input_html => { :class => 'form-control', :rows => 5 }, error: 'Veuillez mettre une description'  %>
+      </div>
+      <div class="form-group-reduced">
+        <%= f.input :price, label: 'Prix de la location', :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'form-control' }, error: 'Le prix est obligatoire' %>
+      </div>
 
-      <label class="custom-file">
-        <%= f.input :photo, label: 'Charger une photo', as: :attachinary, :label_html => { :class => 'form-control-label' }, :input_html => { :class => 'custom-file-input' } %>
-        <span class="custom-file-control"></span>
-      </label>
+     <span id="label-photo">Photo de la doll</span>
+      <div class="form-group-photo">
+        <label class="custom-file-photo">
+          <%= f.input :photo, as: :attachinary, :label_html => { :class => 'doll-name' }, :input_html => { :class => 'custom-file-input' } %>
 
+          <span class="custom-file"></span>
+
+        </label>
+
+      </div>
+
+      <%= f.button :submit, class: 'btn btn-booking' %>
+   <% end %>
     </div>
-    <%= f.button :submit, class: 'btn btn-primary' %>
- <% end %>
+  </div>
   </div>
 </div>
