--- a/app/assets/stylesheets/components/_dolls_card.scss
+++ b/app/assets/stylesheets/components/_dolls_card.scss
@@ -16,7 +16,7 @@
 }
 .card-image{
   width: 100%;
-  height: 1000px;
+  height: 70vh;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left center;
