--- a/app/views/dolls/show.html.erb
+++ b/app/views/dolls/show.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, @doll.name.capitalize) %>
 <div class="content" >
-  <div class="container-fluid"">
+  <div class="container-fluid">
     <div class="card">
         <div class="row">
           <div class="col-xs-12 col-md-6 padding-0">
