--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -5,7 +5,6 @@
         margin-top: 30px;
         padding: 0;
     }
-
     #custom-search-input .search-query {
         padding-right: 3px;
         padding-right: 4px \9;
@@ -19,43 +18,80 @@
         border-radius: 8px;
         height: 70px;
     }
-
-
     .search-query:focus + button {
         z-index: 3;
     }
-
     .fake-input{
       display: flex;
       justify-content: space-between;
       border: 1px solid rgb(220,220,220);
-      padding: 10px 30px ;
+      padding: 10px 20px ;
       margin-top: 35px;
       border-radius: 8px;
+      width: 100%;
       height: 80px;
       input, input:focus, input:hover, textarea:focus, textarea:hover {
-        width: 88%;
+        width: 110%;
         border: none;
         outline: none !important;
+      form {
+        height: 100px;
+        width: 100%;
+      }
     }
 }
 
 span {
   z-index: 10;
 }
-
-
-#button-search{
-  width: 130px;
-  height: 48px;
-  margin-top: 5px;
-  margin-right: -15px;
-  border-radius: 6px;
-  color: white;
+.search-field, #user_address {
+  border: none;
+  box-shadow: none;
+  border-image-width: none;
+  color: black;
+  opacity: 0.7;
+  font-size: 18px;
 }
 
+#button-search{
+  margin-right: -15px;
+  line-height:  30px;
+}
 .btn-pink{
   background-color: $pink;
   border-radius: 6px;
   color: white;
+  height: 48px;
+  margin-top: 5px;
+  padding-left: 18px;
+  padding-right: 18px;
 }
+.fake-input form {
+  display: flex;
+  align-content: center;
+  justify-content: space-between;
+  width: 100%;
+  padding-right: 10px;
+}
+.form-group .string .optional .user_address {
+  margin-bottom: 0px;
+}
+.fake-input .form-control.string.required{
+  border: none;
+  outline: none !important;
+  width: 100%;
+  width: 250px;
+  box-shadow: none;
+  height: 58px;
+}
+.fake-input label.search-field {
+  display: none;
+}
+.control-label.string.required.search-field {
+  width: 100%;
+}
+
+#doll_address, .doll_address{
+  width: 100%;
+}
+
