--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
     <div class="col-xs-12 col-sm-6">
       <div class="card-profile card-profile-activity">
         <div class="buttons">
-          <%= link_to new_user_doll_path(@user) do %>
+          <%= link_to new_doll_path(@user) do %>
             <i class="fa fa-plus"></i>
             <span>Ajouter une doll en location</span>
           <% end %>
