--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,6 @@
 
     <%= javascript_include_tag 'application' %>
     <%= cloudinary_js_config %>
+      <%= yield(:after_js) %>
   </body>
 </html>
