photo responsive reste problème footer

--- a/app/assets/stylesheets/components/_dolls_card.scss
+++ b/app/assets/stylesheets/components/_dolls_card.scss
@@ -16,10 +16,10 @@
 }
 .card-image{
   width: 100%;
-  height: 70vh;
+  height: 1000px;
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: left center;
+  background-position: center center;
   padding-right: -15px;
 }
 .padding-0 {
