--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -73,7 +73,7 @@
     </div>
     <!-- Dolls booked ******************-->
     <div class="col-xs-12 col-sm-6">
-      <h4>Dolls Louez</h4>
+      <h4>Dolls Louée</h4>
       <h5>Vous avez louez <%= @bookings.count %> dolls</h5>
       <% @bookings.each do |booking| %>
         <div class="message">
