--- a/app/assets/stylesheets/components/_searchbar.scss
+++ b/app/assets/stylesheets/components/_searchbar.scss
@@ -90,8 +90,7 @@ span {
 .control-label.string.required.search-field {
   width: 100%;
 }
-
-#doll_address, .doll_address{
+#query_address, .query_address{
   width: 100%;
 }
 
